@@ -1,12 +1,14 @@
 Package: princurve
-Version: 1.1-9
-Date: 2007-07-12
+Version: 1.1-10
+Date: 2009-10-04
 Title: Fits a Principal Curve in Arbitrary Dimension
-Author: S original by Trevor Hastie <trevor@research.att.com>
-	R port by Andreas Weingessel <Andreas.Weingessel@ci.tuwien.ac.at>
+Author: S original by Trevor Hastie <trevor@research.att.com> R port by
+        Andreas Weingessel <Andreas.Weingessel@ci.tuwien.ac.at>
 Maintainer: Andreas Weingessel <Andreas.Weingessel@ci.tuwien.ac.at>
 Description: fits a principal curve to a data matrix in arbitrary
-        dimensions 
+        dimensions
 License: GPL-2
 Depends: R (>= 1.9.0), stats, graphics
-Packaged: Fri Jul 13 00:02:10 2007; hornik
+Packaged: 2009-10-04 18:45:02 UTC; hornik
+Repository: CRAN
+Date/Publication: 2009-10-04 18:51:20
