@@ -1,3 +1,11 @@
+2009-10-04  Kurt Hornik  <Kurt.Hornik@wu.ac.at>
+
+	* DESCRIPTION (Version): New version is 1.1-10.
+
+	* R/principal.curve.R (principal.curve):
+	* man/principal.curve.Rd:
+	Enhancements by Henrik Bengtsson <hb@stat.berkeley.edu>.
+
 2007-07-12  Kurt Hornik  <Kurt.Hornik@wu-wien.ac.at>
 
 	* DESCRIPTION (Version): New version is 1.1-9.
